<resources>
    <string name="app_name">ProjectCambo</string>
    <string name="action_settings">Settings</string>
    <string name="noteC">C </string>
    <string name="noteCs">C#</string>
    <string name="noteD">D </string>
    <string name="noteEb">Eb</string>
    <string name="noteE">E </string>
    <string name="noteF">F </string>
    <string name="noteFs">F#</string>
    <string name="noteG">G </string>
    <string name="noteGs">G#</string>
    <string name="noteA">A </string>
    <string name="noteBb">Bb</string>
    <string name="noteB">B </string>
    <string name="highcsharp">1 </string>
    <string name="main_score">Here are the notes you played</string>
    <string name="record_status">Not Recording</string>
    <string name="tempo">4/4</string>
    <string name="time_signature">60</string>
    <string name="title_activity_welcome_page">welcomePage</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register">register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="Remember_me">Remember me</string>
    <string name="login">login</string>
    <string name="name">name</string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="Sign_up_now">Sign up now</string>
    <string name="confirm_password">confirm password</string>
    <string name="signup">signup</string>
    <string name="already_have_an_account"><u>Already have an account? Signin now</u></string>
    <string name="play"><u>PLAY</u></string>
    <string name="startmetro"><u>START METRONOME</u></string>
    <string name="timesig3"><u>3/4</u></string>
    <string name="timesig4"><u>4/4</u></string>
    <string name="title_activity_user_main_page">UserMainPage</string>
    <string name="logout">LOG OUT</string>
    <string name="back">BACK</string>
    <string name="createNewSong">CREATE NEW SONG</string>
    <string name="viewHistory">VIEW HISTORY</string>
    <string name="seekbar">60</string>
    <string name="keyboard">keyboard</string>
    <string name="keyboard2">C4</string>
    <string name="title_activity_add_lyrics">EditScores</string>
    <string name="title_activity_add_lyrics_scores">AddLyrics</string>
    <string name="addLyrics">Add Lyrics</string>
    <string name="saveLyrics">Save</string>
    <string name="saveSongs">save</string>
    <string name="openHistory">open</string>
    <string name="save">Save Your Creation</string>
    <string name="filename">New Score</string>
    <string name="authorname">Author</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="title_activity_save">SaveActivity</string>
    <string name="title_activity_editsave">EditSaveActivity</string>
    <string name="tempoHint">Tempo</string>
    <string name="deleteall">DeleteAll</string>
    <string name="my_keyboard">MyKeyboard</string>
    <string name="sybtype_en_US">English (US)</string>
    <string name="title_activity_keyboard">KeyboardActivity</string>
    <string name="title_activity_try">TryActivity</string>
    <string-array name="scoreKeys">
        <item>C</item>
        <item>C#</item>
        <item>D</item>
        <item>Eb</item>
        <item>E</item>
        <item>F</item>
        <item>F#</item>
        <item>G</item>
        <item>G#</item>
        <item>A</item>
        <item>Bb</item>
        <item>B</item>
    </string-array>
	<string name="title_activity_display_score">DisplayScore</string>
    <string name="example">||\u00203\u0020\u00203\u0332\u00203\u0332\u0020\u0020\u0020\u00204\u0020\u0020\u0020\u00205\u0020\u0020\u0020\u0020|
        \u0020\u0020\u00203\u0020\u0020\u0020\u0020-\u0020\u0020\u0020\u0020\u00202\u0020\u0020\u0020\u0020-\u0020|
        1\u0020\u0020\u00201\u0332\u00201\u0332\u0020\u0020\u0020\u00202\u0020\u0020\u0020\u00203\u0020\u0020\u0020\u0020|
        \n 黑\u0020黑的\u0020\u0020天\u0020\u0020空\u0020\u0020\u0020\u0020\u0020\u0020\u0020低\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020语\u0020\u0020\u0020\u0020
        \u0020\u0020亮\u0020亮的\u0020\u0020星\u0020\u0020星
        \n|\u00203\u2022\u0020\u00207\u0332\u0020\u0020\u0020\u0020\u0020\u0020\u00207\u0323\u0020\u0020\u0020\u0020\u0020-\u0020\u0020\u0020\u0020|
        \u0020\u0020\u00206\u0323\u0020\u0020\u0020\u00203\u0020\u0020\u0020\u00202\u0020\u0020\u0020\u0020-\u0020|
        \u0020\u00206\u0323\u0020\u0020\u0020\u00203\u0020\u0020\u0020\u00202\u0020\u0020\u0020\u0020-\u0020\u0020\u0020\u0020\u0020|
        \n\u0020\u0020相\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020随\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020虫\u0020\u0020儿\u0020\u0020飞\u0020\u0020\u0020\u0020\u0020
        \u0020\u0020\u0020虫\u0020\u0020儿\u0020\u0020飞
        \n|\u00206\u0323\u0020\u0020\u00203\u0020\u0020\u00202\u2022\u0020\u0020\u0020\u00201\u0332\u0020\u0020\u0020\u0020\u0020\u0020\u0020|\u0020\u0020\u00201\u0020\u0020\u0020-\u0020\u0020\u0020\u0020-\u0020\u0020\u0020\u0020-\u0020\u0020\u0020\u0020\u0020\u2225
        \n\u0020你\u0020在\u0020\u0020思\u0020\u0020\u0020念\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020谁
    </string>

    <string name="example2">||\u00203\u0020\u00203\u0332\u00203\u0332\u0020\u0020\u0020\u00204\u0020\u0020\u0020\u00205\u0020\u0020\u0020\u0020|
        \u0020\u0020\u00203\u0020\u0020\u0020\u0020-\u0020\u0020\u0020\u0020\u00202\u0020\u0020\u0020\u0020-\u0020|
        1\u0020\u0020\u00201\u0332\u00201\u0332\u0020\u0020\u0020\u00202\u0020\u0020\u0020\u00203\u0020\u0020\u0020\u0020|</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="start">Open A Score</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="navigation_toolbox">
        <item>CREATE NEW SONG</item>
        <item>SAVE RECORD</item>
        <item>EDIT RECORD</item>
        <item>ADD LYRICS</item>
        <item>VIEW RECORD LISTS</item>
        <item>EXPORT TO PDF</item>
    </string-array>

<!--    <string-array name="navigation_toolbox_EditScoreActivity">
        <item>CREATE NEW SONG</item>
        <item>SAVE RECORD</item>
        <item>SAVE AS NEW RECORD</item>
        <item>ADD LYRICS</item>
        <item>VIEW RECORD LISTS</item>
        <item>EXPORT TO PDF</item>
    </string-array>

    <string-array name="navigation_toolbox_addlyrics">
        <item>CREATE NEW SONG</item>
        <item>SAVE RECORD</item>
        <item>EDIT RECORD</item>
        <item>VIEW RECORD LISTS</item>
        <item>EXPORT TO PDF</item>
    </string-array>-->

    <string name="profile">profile</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

        <string-array name="time_signature_array">
            <item>4/4</item>
            <item>3/4</item>
        </string-array>
    <string name="app_id">161733834174689</string>
    <string name="sendEmail">Send Email</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
</resources>