<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/name_Field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/filename"
            />
        <EditText
            android:id="@+id/author_Field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/authorname"
            android:layout_below="@+id/name_Field"/>
        <EditText
            android:id="@+id/tempo_Field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/tempoHint"
            android:inputType="number"
            android:layout_below="@+id/author_Field"/>
        <RadioGroup
            android:id="@+id/timeSig_Field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tempo_Field">
            <RadioButton
                android:id="@+id/timeSig43"
                android:onClick="changeTimeSig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/timesig3"
                android:textColor="#000000" />
            <RadioButton
                android:id="@+id/timeSig44"
                android:onClick="changeTimeSig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/timesig4"
                android:textColor="#000000" />
        </RadioGroup>
        <!--<Spinner-->
        <!--android:id="@+id/keySpinner"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/timeSig_Field"-->
        <!--android:spinnerMode="dialog"-->
        <!--android:entries="@array/scoreKeys"/>-->
    </RelativeLayout>
</LinearLayout>