<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#E8E8E8"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/control_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <ImageButton
            android:id="@+id/record_button"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:maxHeight="70dp"
            android:maxWidth="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/startbutton"
            android:baselineAlignBottom="false"
            android:clickable="false"
            android:cropToPadding="false"
            android:background="#00000000" />
        <TextView
            android:id="@+id/record_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_gravity="top"
            android:text="@string/record_status"/>
        <Button
            android:id="@+id/tempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempo"
            android:background="#C8C8C8C8" />
        <Button
            android:id="@+id/time_signature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_signature"
            android:onClick="changeTempo"
            android:background="#C8C8C8C8" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Button"
            android:id="@+id/button"
            android:onClick="startMetronome"
            android:background="#C8C8C8C8" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/score"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/control_panel"
        android:layout_above="@+id/keyboard">

        <TextView
            android:id="@+id/main_score"
            android:text="@string/main_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_gravity="top"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            />

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/keyboard"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false">

        <LinearLayout
            android:id="@+id/white_keys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_alignParentBottom="true">
            <ImageButton
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:text="@string/noteC"
                android:id="@+id/cnatural"
                android:src="@drawable/whitekey1"/>

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:text="@string/noteD"
                android:id="@+id/dnatural"
                android:src="@drawable/whitekey2" />

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:text="@string/noteE"
                android:id="@+id/enatural"
                android:src="@drawable/whitekey3" />

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:text="@string/noteF"
                android:id="@+id/fnatural"
                android:src="@drawable/whitekey1" />

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:text="@string/noteG"
                android:id="@+id/gnatural"
                android:src="@drawable/whitekey2" />

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:text="@string/noteA"
                android:id="@+id/anatural"
                android:src="@drawable/whitekey2"/>

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:text="@string/noteB"
                android:id="@+id/bnatural"
                android:src="@drawable/whitekey3" />
            <ImageButton
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:text="C"
                android:id="@+id/highcnatural"
                android:src="@drawable/whitekey1" />
        </LinearLayout>

        <LinearLayout
            android:layout_alignTop="@+id/white_keys"
            android:id="@+id/black_keys"
            android:layout_width="wrap_content"
            android:layout_height="100dp">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:text="@string/noteCs"
                android:id="@+id/csharp"
                android:layout_marginLeft="38dp"
                android:layout_marginStart="38dp"
                android:src="@drawable/blackkey"/>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_marginLeft="22dp"
                android:layout_marginStart="22dp"
                android:text="@string/noteEb"
                android:id="@+id/eflat"
                android:src="@drawable/blackkey" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:text="@string/noteFs"
                android:id="@+id/fsharp"
                android:layout_marginLeft="70dp"
                android:layout_marginStart="70dp"
                android:src="@drawable/blackkey"/>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/noteGs"
                android:id="@+id/gsharp"
                android:src="@drawable/blackkey" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/noteBb"
                android:id="@+id/bflat"
                android:src="@drawable/blackkey" />
        </LinearLayout>
    </RelativeLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loweroctave"
        android:text="Down"
        android:src="@drawable/downbutton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/keyboard"
        android:layout_toEndOf="@+id/keyboard"
        android:background="#00000000"
        android:scaleType="fitCenter"
        android:layout_below="@+id/score"
        android:layout_above="@+id/upoctave"
        android:layout_alignParentTop="false" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/upoctave"
        android:text="UP"
        android:src="@drawable/upbutton"
        android:layout_alignRight="@+id/score"
        android:layout_alignEnd="@+id/score"
        android:layout_toRightOf="@+id/keyboard"
        android:layout_toEndOf="@+id/keyboard"
        android:background="#0000000"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
