<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="70dp"
    android:paddingRight="70dp"
    android:paddingTop="50dp"
    android:background="@drawable/welcomepage"
    android:id="@+id/register">
    <!--<TextView-->
        <!--android:layout_width="wrap_content "-->
        <!--android:text="email"-->
        <!--android:layout_height="wrap_content" />-->

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/email"
        android:background="#66FFFFFF"
        android:textColorHint="#FFFFFF"
        android:paddingLeft="30dp"
        android:paddingRight="0dp"/>

    <!--<TextView-->
        <!--android:layout_width="match_parent "-->
        <!--android:text="password"-->
        <!--android:layout_height="wrap_content" />-->

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        android:layout_height="35dp"
        android:background="#66FFFFFF"
        android:textColorHint="#FFFFFF"
        android:paddingLeft="30dp"
        android:paddingRight="0dp"/>
    <!--<TextView-->
        <!--android:layout_width="match_parent "-->
        <!--android:text="confirm password"-->
        <!--android:layout_height="wrap_content" />-->

    <EditText
        android:id="@+id/confirm_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/confirm_password"
        android:background="#66FFFFFF"
        android:textColorHint="#FFFFFF"
        android:paddingLeft="30dp"
        android:paddingRight="0dp"/>

    <Button
        android:id="@+id/signup"
        android:text="@string/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:background="#D6A0A0A0"/>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:text="@string/already_have_an_account"
        android:id="@+id/signin"
        android:layout_marginLeft="300dp"
        android:textColor="#FFFFFF"/>

</LinearLayout>
