<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/welcomepage"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:id="@+id/">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:background="#66FFFFFF"
            android:textColorHint="#FFFFFF"
            android:layout_marginTop="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="0dp"/>


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:textIsSelectable="false"
            android:hint="@string/password"
            android:background="#66FFFFFF"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:paddingLeft="30dp"
            android:paddingRight="0dp"/>

        <CheckBox
            android:id="@+id/checkboxrememberme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Remember_me"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="bottom"
            android:background="#D6A0A0A0"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:id="@+id/forgotpasswordholder">

                <TextView
                    android:id="@+id/forgotpassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/forgot_password"
                    android:layout_gravity="center"
                    android:textColor="#FFFFFF"/>

                <TextView
                    android:id="@+id/signup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sign_up_now"
                    android:paddingLeft="180dp"
                    android:textColor="#FFFFFF"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
