<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/piano_pic"
    tools:context="com.example.liyuan.projectcombo.AddLyricsActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/control_panel"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#3A393A"
            android:alpha="0.7">

            <ImageButton
                android:id="@+id/record_button"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#00FFFFFF"
                android:baselineAlignBottom="false"
                android:clickable="false"
                android:cropToPadding="false"
                android:maxHeight="70dp"
                android:maxWidth="70dp"
                android:scaleType="fitXY"
                android:src="@drawable/startbutton" />

            <TextView
                android:id="@+id/record_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.5"
                android:padding="7dp"
                android:text="@string/record_status"
                android:textColor="#FFFFFF" />

            <ImageButton
                android:id="@+id/playBack"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:onClick="playBack"
                android:scaleType="fitXY"
                android:src="@drawable/playback" />



            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1.5">

                <RadioGroup
                    android:id="@+id/timeSigRadioGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:checkedButton="@+id/sound">

                    <RadioButton
                        android:id="@+id/tempo3"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:checked="false"
                        android:onClick="onRadioButtonClick"
                        android:text="@string/timesig3"
                        android:textColor="#FFFFFF" />

                    <RadioButton
                        android:id="@+id/tempo4"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:checked="true"
                        android:onClick="onRadioButtonClick"
                        android:text="@string/timesig4"
                        android:textColor="#FFFFFF" />

                </RadioGroup>
            </LinearLayout>
            <ImageButton
                android:id="@+id/metronomeButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="7dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:onClick="startMetronome"
                android:scaleType="fitXY"
                android:src="@drawable/metronome" />
            <SeekBar
                android:id="@+id/tempoSeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_weight="2.9"
                android:max="60"
                android:progress="1" />

            <TextView
                android:id="@+id/seekbarvalue"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.6"
                android:gravity="center_vertical"
                android:text="@string/seekbar"
                android:textColor="#FFFFFF" />

        </LinearLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Here is the notes you played"
                android:id="@+id/tvScores"
                android:textColor="#FFFFFF"
                android:scrollbars="vertical"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edLyrics"
                android:scrollbars="vertical"
                android:textColor="#FFFFFF"
                android:hint="Input your lyrics here" />

            </RelativeLayout>



        </LinearLayout>


</RelativeLayout>
